tests/baselines/reference/parserModifierOnStatementInBlock4.errors.txt
==== tests/cases/compiler/parserModifierOnStatementInBlock4.ts (1 errors) ====
    {
       export function bar() {
       ~~~~~~
!!! parserModifierOnStatementInBlock4.ts(2,4): error TS1055: Modifiers cannot appear here.
       }
    }
    